fix bgcolor ,productTitle ,footerAlign ,slidebar ,filterBox

--- a/src/components/footer/componentsFooter/RightSection.css
+++ b/src/components/footer/componentsFooter/RightSection.css
@@ -65,6 +65,10 @@
         text-align: center;
     }
 
+    .socialMedia-container {
+        align-self: center;
+    }
+
     .socialMedia-container .socialMedia {
         gap: 0.5rem;
     }
