--- a/src/components/productsBox/componentsProductsBox/FiltersBox.css
+++ b/src/components/productsBox/componentsProductsBox/FiltersBox.css
@@ -50,4 +50,9 @@
     .filterIcon {
         display: none;
     }
+
+    .activeFilter {
+        color: var(--them-color);
+        border: none;
+    }
 }
